# lab-work-lera

./: .gitignore  README.md
cpp_lab/: CMakeLists.txt  README.md  build.ps1  run_full.ps1
cpp_lab/outputs/: REPORT.md  aggregated_results.csv  raw_results.csv
cpp_lab/scripts/: plot_results.py
cpp_lab/src/: main.cpp
demo_outputs/: REPORT.md  aggregated_results.csv
python_lab/: LAB_REPORT_RU.md  README.md
python_lab/demo_outputs/: raw_results.csv
python_lab/src/: benchmark.py  trees.py
